<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="42dp">

        <EditText
            android:id="@+id/Field"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:cursorVisible="false"
            android:focusable="false"
            android:fontFamily="sans-serif-light"
            android:gravity="right|bottom"
            android:hint="0"
            android:maxLength="9"
            android:paddingEnd="30dp"
            android:paddingRight="30dp"
            android:scrollHorizontally="false"
            android:singleLine="true"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="60sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:weightSum="5">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="4">

                <com.example.Calculator.MyButtons
                    android:id="@+id/AllClear"
                    android:layout_width="0dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/fade_in_for_another_three_buttons"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/AllClear"
                    android:textSize="40sp" />

                <com.example.Calculator.MyButtons
                    android:id="@+id/SignChanger"
                    android:layout_width="0dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/fade_in_for_another_three_buttons"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/SighnChanger"
                    android:textSize="40sp" />

                <com.example.Calculator.MyButtons
                    android:id="@+id/Percent"
                    android:layout_width="0dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/fade_in_for_another_three_buttons"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/Percent"
                    android:textSize="40sp" />

                <com.example.Calculator.MyButtons
                    android:id="@+id/Division"
                    android:layout_width="0dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/fade_in_for_arithmetic_buttons"
                    android:gravity="center"
                    android:text="@string/Division"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="4">

                <com.example.Calculator.MyButtons
                    android:id="@+id/Seven"
                    android:layout_width="0dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/fade_in_for_buttons"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/_7"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp" />

                <com.example.Calculator.MyButtons
                    android:id="@+id/Eight"
                    android:layout_width="0dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/fade_in_for_buttons"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/_8"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp" />

                <com.example.Calculator.MyButtons
                    android:id="@+id/Nine"
                    android:layout_width="0dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/fade_in_for_buttons"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/_9"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp" />

                <com.example.Calculator.MyButtons
                    android:id="@+id/Multiplication"
                    android:layout_width="0dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/fade_in_for_arithmetic_buttons"
                    android:gravity="center"
                    android:text="@string/Multiplication"
                    android:textColor="#FFFFFFFF"
                    android:textSize="40sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="4">

                <com.example.Calculator.MyButtons
                    android:id="@+id/Four"
                    android:layout_width="0dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/fade_in_for_buttons"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/_4"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp" />

                <com.example.Calculator.MyButtons
                    android:id="@+id/Five"
                    android:layout_width="0dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/fade_in_for_buttons"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/_5"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp" />

                <com.example.Calculator.MyButtons
                    android:id="@+id/Six"
                    android:layout_width="0dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/fade_in_for_buttons"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/_6"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp" />

                <com.example.Calculator.MyButtons
                    android:id="@+id/Subtruction"
                    android:layout_width="0dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/fade_in_for_arithmetic_buttons"
                    android:gravity="center"
                    android:text="@string/substruct"
                    android:textColor="#FFFFFFFF"
                    android:textSize="40sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="4">

                <com.example.Calculator.MyButtons
                    android:id="@+id/One"
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/fade_in_for_buttons"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/_1"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp" />

                <com.example.Calculator.MyButtons
                    android:id="@+id/Two"
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/fade_in_for_buttons"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/_2"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp" />

                <com.example.Calculator.MyButtons
                    android:id="@+id/Three"
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/fade_in_for_buttons"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/_3"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp" />

                <com.example.Calculator.MyButtons
                    android:id="@+id/Addtion"
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/fade_in_for_arithmetic_buttons"
                    android:gravity="center"
                    android:text="@string/Addition"
                    android:textColor="#FFFFFFFF"
                    android:textSize="40sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="4">

                <Button
                    android:id="@+id/Zero"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="2"
                    android:background="@drawable/fade_in_for_zero_button"
                    android:fontFamily="sans-serif-light"
                    android:gravity="left|center_vertical"
                    android:paddingStart="30dp"
                    android:paddingLeft="30dp"
                    android:text="@string/_0"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp" />

                <com.example.Calculator.MyButtons
                    android:id="@+id/Dot"
                    android:layout_width="0dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/fade_in_for_buttons"
                    android:gravity="center"
                    android:text="@string/Dot"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp" />

                <com.example.Calculator.MyButtons
                    android:id="@+id/Equal"
                    android:layout_width="0dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/fade_in_for_arithmetic_buttons"
                    android:gravity="center"
                    android:text="@string/Equal"
                    android:textColor="#FFFFFFFF"
                    android:textSize="40sp" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>